package NYT.NOrm.NExample.NClient.NProto.NDataModel;

import "yt_proto/yt/orm/client/proto/object.proto";

option java_package = "ru.yandex.yt.yt.orm.example.client.proto.data_model";
option go_package = "go.ytsaurus.tech/yt/yt/orm/example/client/proto/data_model";

////////////////////////////////////////////////////////////////////////////////

option (NYT.NOrm.NClient.NProto.object_type) = {
    camel_case_name: "Interceptor"
    snake_case_name: "interceptor"
    primary_key: ["id"]
    parent: "MotherShip"
    type_value: 102
    watch_logs: [
        { snake_case_name: "watch_log" }
    ]
    forbid_parent_removal: true
};

////////////////////////////////////////////////////////////////////////////////

message TInterceptorMetaMixin
{
    optional int64 id = 1 [(NYT.NOrm.NClient.NProto.generation_policy) = GP_RANDOM];
    optional int64 nexus_id = 2 [(NYT.NOrm.NClient.NProto.transitive_key) = "Nexus"];
}

message TInterceptorSpecMixin
{
    optional int64 target_x = 1;
    optional int64 target_y = 2;
}

////////////////////////////////////////////////////////////////////////////////
